--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,12 +1,17 @@
-name: Linting
-
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  styles:
-    runs-on: ubuntu-18.04
-    name: Linting
+  python-lint:
+    runs-on: ubuntu-latest
+    name: CI workflow
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-python@v1
-      - uses: whynothugo/python-linting@master
+    - name: checkout source repo
+      uses: actions/checkout@v2
+
+    - name: linting
+      uses: alexanderdamiani/pylinter@v1.1.0
+      with:
+        python-root: '.'
+        flake8-flags: '--count --show-source --statistics'
+        mypy-flags: '--ignore-missing-imports'
+        fail-on-isort: true
