--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,7 +11,12 @@ jobs:
     - name: linting
       uses: alexanderdamiani/pylinter@v1.1.0
       with:
+        # choose directory to run linters on
         python-root: '.'
         flake8-flags: '--count --show-source --statistics'
         mypy-flags: '--ignore-missing-imports'
-        fail-on-isort: true
+        fail-on-isort: false
+
+# reference links:
+#   https://github.com/alexanderdamiani/pylinter
+#   https://github.com/marketplace/actions/pylinter
