--- a/requirements.txt
+++ b/requirements.txt
@@ -1,272 +1,7 @@
-aiohttp==3.6.2
-alembic==0.9.3.dev0
-altgraph==0.17
-ansible==2.9.7
-apturl==0.5.2
-asn1crypto==0.24.0
-async-timeout==3.0.1
-attrs==19.3.0
-Babel==2.4.0
-beautifulsoup4==4.9.1
-bleach==3.1.1
-blinker==1.4
-blis==0.4.1
-boto==2.49.0
-boto3==1.14.33
-botocore==1.17.33
-Brlapi==0.6.6
-bs4==0.0.1
-cachetools==4.1.0
-catalogue==1.0.0
-certifi==2020.6.20
-cffi==1.14.5
-chardet==3.0.4
-click==6.7
-colorama==0.3.7
-colorful==0.5.4
-colour==0.1.5
-command-not-found==0.3
-configparser==5.0.1
-contextvars==2.4
-crayons==0.4.0
-cryptography==2.1.4
-cupshelpers==1.0
-cycler==0.10.0
-cymem==2.0.3
-cytoolz==0.10.1
-dash==1.12.0
-dash-core-components==1.10.0
-dash-html-components==1.0.3
-dash-renderer==1.4.1
-dash-table==4.7.0
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.6.0
-distro-info===0.18ubuntu0.18.04.1
-docutils==0.15.2
-docx2txt==0.8
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
-entrypoints==0.3
+click==7.1.2
 Flask==1.1.2
-Flask-BabelEx==0.9.3
-Flask-Compress==1.4.0
-Flask-Gravatar==0.4.2
-Flask-Login==0.4.0
-Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
-Flask-Paranoid==0.2.0
-Flask-Principal==0.4.0
-Flask-Security-Too==3.4.2
-Flask-SQLAlchemy==2.1
-Flask-WTF==0.14.2
-future==0.18.2
-gensim==3.8.3
-google-api-core==1.24.1
-google-api-python-client==1.12.8
-google-auth==1.24.0
-google-auth-httplib2==0.0.4
-google-cloud-aiplatform==0.5.1
-google-cloud-core==1.6.0
-google-cloud-storage==1.36.2
-google-crc32c==1.1.2
-google-resumable-media==1.2.0
-google-search-results-serpwow==1.1.11
-googleapis-common-protos==1.52.0
-grpcio==1.36.1
-h11==0.8.1
-h2==3.2.0
-hjson==3.0.2
-hpack==3.0.0
-hstspreload==2020.9.23
-html5lib==0.999999999
-httplib2==0.18.1
-httpx==0.9.5
-hyperframe==5.2.0
-idna==2.10
-idna-ssl==1.1.0
-imageio==2.9.0
-immutables==0.14
-importlib-metadata==1.5.0
-iplot==0.0.0
-ipykernel==5.1.4
-ipython==5.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-itsdangerous==0.24
-jellyfish==0.8.2
-Jinja2==2.11.1
-jmespath==0.10.0
-joblib==0.15.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.0.0
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.2.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-ldap3==2.4.1
-louis==3.5.0
-lxml==4.5.2
-macaroonbakery==1.1.3
-Mako==1.0.7
-MarkupSafe==1.0
-matplotlib==3.2.1
-meld==3.18.0
-mistune==0.8.4
-MouseInfo==0.1.3
-mss==6.0.0
-multidict==4.7.6
-murmurhash==1.0.2
-musicbrainzngs==0.7.1
-mysql-connector==2.2.9
-mysql-connector-python==8.0.22
-nbconvert==5.6.1
-nbformat==5.0.4
-netifaces==0.10.4
-network==0.1
-networkx==2.4
-nltk==3.5
-notebook==6.0.3
-numpy==1.18.1
-oauth==1.0.1
-oauth2client==4.1.3
-olefile==0.45.1
-pandas==1.0.1
-pandocfilters==1.4.2
-paramiko==2.0.0
-passlib==1.7.1
-pdfminer.six==20200726
-pexpect==4.2.1
-pickleshare==0.7.4
-pika==1.1.0
-Pillow==5.1.0
-plac==1.1.3
-plotly==4.7.1
-preshed==3.0.2
-prettyprinter==0.18.0
-prettytable==1.0.1
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
-proto-plus==1.17.0
-protobuf==3.14.0
-psutil==5.4.2
-psycopg2==2.8.6
-psycopg2-binary==2.8.6
-ptyprocess==0.6.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.50
-pycairo==1.16.2
-pycparser==2.20
-pycrypto==2.6.1
-pycryptodome==3.9.8
-pycups==1.9.73
-PyDrive==1.3.1
-pyemd==0.5.1
-pygame==2.0.1
-PyGetWindow==0.0.8
-Pygments==2.2.0
-pygobject==3.26.1
-pyinotify==0.9.6
-pyinstaller==4.2
-pyinstaller-hooks-contrib==2020.11
-pymacaroons==0.13.0
-PyMsgBox==1.0.8
-PyMySQL==0.10.0
-PyNaCl==1.1.2
-pyOpenSSL==17.5.0
-pyparsing==2.4.7
-PyPDF2==1.26.0
-pyperclip==1.8.0
-Pyphen==0.9.5
-PyRect==0.1.4
-pyresparser==1.0.6
-pyRFC3339==1.0
-pyrsistent==0.15.7
-PyScreeze==0.1.26
-python-apt==1.6.5+ubuntu0.5
-python-dateutil==2.8.1
-python-debian==0.1.32
-python3-xlib==0.15
-pytrends==4.7.3
-pytrends-async==0.3.2
-PyTweening==1.0.3
-pytz==2020.1
-pyvis==0.1.7.0
-PyWavelets==1.1.1
-pywhatkit==3.0
-pyxdg==0.25
-PyYAML==3.12
-pyzmq==19.0.0
-qtconsole==4.6.0
-regex==2020.5.14
-reportlab==3.4.0
-requests==2.24.0
-requests-unixsocket==0.1.5
-retrying==1.3.3
-rfc3986==1.4.0
-rsa==4.6
-s3transfer==0.3.3
-scikit-image==0.17.2
-scikit-learn==0.23.2
-scipy==1.4.1
-seaborn==0.11.0
-SecretStorage==2.3.1
-selenium==3.141.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-simplejson==3.13.2
-simplifiedpytrends==1.1.0
-six==1.15.0
-smart-open==2.1.0
-sniffio==1.1.0
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-spacy==2.2.4
-speaklater==1.4
-speedtest-cli==2.0.0
-SQLAlchemy==1.1.11
-sqlparse==0.2.4
-srsly==2.0.1
-sshtunnel==0.1.4
-system-service==0.3
-systemd-python==234
-tenacity==6.0.0
-terminado==0.8.3
-testpath==0.4.4
-textacy==0.10.0
-textblob==0.15.3
-thinc==7.4.0
-threadpoolctl==2.0.0
-tifffile==2020.9.3
-toolz==0.10.0
-tornado==6.0.3
-tqdm==4.46.0
-traitlets==4.3.2
-typing-extensions==3.7.4.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-uritemplate==3.0.1
-urllib3==1.25.10
-usb-creator==0.3.3
-vboxapi==1.0
-wadllib==1.3.2
-warcio==1.7.2
-wasabi==0.6.0
-wcwidth==0.1.7
-webdriver-manager==3.2.2
-webencodings==0.5.1
-Werkzeug==0.16.0
-widgetsnbextension==3.5.1
-wikipedia==1.4.0
-WTForms==2.1
-xkit==0.0.0
-yarl==1.5.1
-zipp==3.0.0
-zope.interface==4.3.2
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+Werkzeug==1.0.1
