--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,7 +11,7 @@ jobs:
     - name: linting
       uses: alexanderdamiani/pylinter@v1.1.0
       with:
-        # choose directory to run linters on
+        # choose directory to run linters
         python-root: '.'
         flake8-flags: '--count --show-source --statistics'
         mypy-flags: '--ignore-missing-imports'
