--- a/.github/workflows/linting_2.yml
+++ b/.github/workflows/linting_2.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: ricardochaves/python-lint@v1.3.0
         with:
-          python-root-list: "python_alelo tests"
+          python-root: '.'
           use-pylint: false
           use-pycodestyle: false
           use-flake8: false
