--- a/.github/workflows/linting_2.yml
+++ b/.github/workflows/linting_2.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: ricardochaves/python-lint@v1.3.0
         with:
           python-root: '.'
-          use-pylint: false
+          use-pylint: True
           use-pycodestyle: false
           use-flake8: false
           use-black: false
