--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -16,9 +16,9 @@ jobs:
         flake8-flags: '--count --show-source --statistics'
         mypy-flags: '--ignore-missing-imports'
         fail-on-isort: false
-        skip-flake8: false
-        skip-mypy: true
-        skip-isort: true
+        skip-flake8: true
+        skip-mypy: false
+        skip-isort: false
 
 # reference links:
 #   https://github.com/alexanderdamiani/pylinter
