--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -16,6 +16,8 @@ jobs:
         flake8-flags: '--count --show-source --statistics'
         mypy-flags: '--ignore-missing-imports'
         fail-on-isort: false
+        skip-flake8: true
+
 
 # reference links:
 #   https://github.com/alexanderdamiani/pylinter
