--- a/.github/workflows/linting_2.yml
+++ b/.github/workflows/linting_2.yml
@@ -1,23 +1,12 @@
-on: [push, pull_request]
+name: Linting
+
+on: [push]
 
 jobs:
-  python-lint:
-    runs-on: ubuntu-latest
-    name: Python linting
+  styles:
+    runs-on: ubuntu-18.04
+    name: Linting
     steps:
-      - uses: actions/checkout@v1
-      - uses: ricardochaves/python-lint@v1.3.0
-        with:
-          python-root-list: '.'
-          use-pylint: True
-          use-pycodestyle: false
-          use-flake8: false
-          use-black: false
-          use-mypy: false
-          use-isort: false
-          extra-pylint-options: ""
-          extra-pycodestyle-options: ""
-          extra-flake8-options: ""
-          extra-black-options: ""
-          extra-mypy-options: ""
-          extra-isort-options: ""
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v1
+      - uses: whynothugo/python-linting@master
